# thunderbolt

./: .gitignore  README.md  index.html  package.json
.github/workflows/: tauri-v2-release.yml
.thunderbot/: README.md  thunderbot-daemon.md  thunderbot.md
src/: AgentChatResponse.tsx  App.tsx  Home.tsx  app.tsx  dal.ts  index.tsx  layout.tsx  types.ts  ui-kit.tsx  welcome.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assist_embeddings/examples/: benchmark.rs  (+2 more)
src-tauri/assist_imap_client/: Cargo.toml  README.md
src-tauri/assist_imap_client/examples/: test_imap.rs
src-tauri/assist_imap_client/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/examples/: embed.rs  imap.rs
src-tauri/src/: embedding.rs  imap_client.rs  lib.rs  main.rs  state.rs
src/automations/: index.tsx
src/chats/: chat-state.tsx  chat.tsx  detail.tsx  layout.tsx  sidebar.tsx
src/components/: DestructiveDialog.tsx  sidebar-footer.tsx
src/db/: database.ts  migrate.ts  schema.ts  tables.ts
src/defaults/: settings.ts
src/devtools/: generate-embeddings.tsx  index.tsx
src/drizzle/: 0001_premium_random.sql  0001_striped_elektra.sql  _migrations.ts
src/imap/: imap.ts  provider.tsx
src/layout/: index.tsx  main-layout.tsx  sidebar.tsx  sideview.tsx
src/lib/: ai-tools.ts  ai.ts  embeddings.ts  indexer.ts  memoize.ts  tray.ts  utils.ts
src/settings/: accounts.tsx  dev-settings.tsx  integrations.tsx  layout.tsx  mcp-servers.tsx  models.tsx  preferences.tsx  provider.tsx  schema.ts  thunderbolt-bridge.tsx
src/tasks/: index.tsx
(+17 files in other folders)
