[package]
name = "assist_imap_client"
version = "0.1.0"
edition = "2021"
description = "IMAP client for Mozilla Assist"
authors = ["Mozilla Assist Team"]

[dependencies]
imap = "3.0.0-alpha.15"
native-tls = "0.2.14"
anyhow = "1.0.96"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = { version = "0.10.2", features = ["serde_support"] }
regex = "1.11.1"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros"] }
